# morth

./: .clang-format  .cmake-format.json  .dir-locals.el  .editorconfig  .gitignore  .gitlab-ci.yml  .local_vimrc.vim  CMakeLists.txt  Makefile  Morth.hi  README.md  build.sh  morth.code-workspace  morth.rb  morth.rkt
.github/workflows/: c-pure.yml  cpp.yml  dotnet.yml  haskell.yml  zig.yml
CMake/: DeclareModule.cmake
Modules/Morth/Source/: Morth.cpp
c/: .clang-format  .gitignore  .local_vimrc.vim  CMakeLists.txt  CMakePresets.json  Morth.c  args.c  args.h  compile.c  compile.h  morth2.c  op.c  op.h  simulate.c  simulate.h  stack.c  stack.h  subprocess.c  subprocess.h
c++/: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .local_vimrc.vim  CMakeLists.txt  CMakePresets.json  Morth.cpp  config.hpp.cin  vcpkg.json
c++/CMake/: DeclareModule.cmake
c++/source/: main.cpp
c++/source/morth/: cross_reference.cpp  cross_reference.hpp  load.cpp  load.hpp  macros.hpp  op.cpp  op.hpp  ops.hpp  owning_span.hpp  parse.cpp  parse.hpp  program.hpp  random_access_stack.hpp  shorter_types.hpp  sim.cpp  sim.hpp  simulate.cpp  simulate.hpp  source_location.hpp  stack.hpp  token.hpp  types.hpp
c++/tests/: hello.morth  loops.morth
c++/tools/: run.py
c-pure/: .clang-format  .gitignore  .local_vimrc.vim  README.md  alloc_printf.c  alloc_printf.h  args_iterator.c  args_iterator.h  attr.h  buffer.h  c_emitter.c  c_emitter.h  compile.c  compile.h  coolbuild.c  coolbuild.h  cross_reference.c  cross_reference.h  fileutil.c  fileutil.h  generic_io.c  generic_io.h  load.c  load.h  main.c  memory.h  nasm_emitter.c  nasm_emitter.h  op.c  op.h  parse.c  parse.h  program.h  run_command.c  run_command.h  simulate.c  simulate.h  source_location.h  stack.c  stack.h  (+4 more)
c-pure/tests/: hello.morth  loops.morth  memory.morth  rule110.morth
c-to-c/: .clang-format  .dir-locals.el  .local_vimrc.vim  CMakeLists.txt  CMakePresets.json  iota.c  morth.c  op_code.iota  string_view.c  string_view.h
c-to-c/cmake/: config.h.cin
c/assembly_sources/: compile.sh  dump.c
c/examples/: conditionals.porth  test.porth
cs/: .gitignore  CEmitter.cs  CompileError.cs  Compiler.cs  Environment.cs  Lexer.cs  MyEnvironment.cs  Op.cs  OpCode.cs  ParseException.cs  Parser.cs  Program.cs  SemanticAnalyzer.cs  Simulator.cs  Subcommand.cs  Token.cs  Unreachable.cs  morth.sln
cs/Morth/: CEmitter.cs  Compiler.cs  Limits.cs  Morth.csproj  NotImplemented.cs  Op.cs  OpCode.cs  Parser.cs  SemanticAnalyzer.cs  Simulator.cs  SourceLocation.cs  Subcommand.cs  SubcommandException.cs
cs/MorthCompiler/: MorthCompiler.csproj  Program.cs
cs/MorthTest/: MorthTest.csproj  ProjectSourcePath.cs  TestRunner.cs  UnitTest1.cs
cs/MorthTest/tests/: arithmetic.morth  conditions.morth  loops.morth  memory.morth  stack.morth
cs/MorthTestRecorder/: MorthTestRecorder.csproj  Program.cs
cs/MorthUtils/: ProjectSourcePath.cs
cs/Temp/: Class1.cs
cs/examples/: conditions.morth
cs/tests/: arithmetic.morth  bitwise.morth  comparison.morth  control_flow.morth  loops.morth  memory.morth  rule110.morth  stack.morth
fs/: .gitignore  .local_vimrc.vim  Blocks.fs  Blocks.fsi  Com.fs  Com.fsi  Lexer.fs  Lexer.fsi  Logger.fs  Main.fs  Morth.fs  Morth.fsproj  Morth.sln  Op.fs  Parser.fs  Parser.fsi  Sim.fs  Sim.fsi  Token.fs  morth.fsproj
fs/Morth.Language/: Blocks.fs  Blocks.fsi  Com.fs  Com.fsi  Config.fs  Driver.fs  Driver.fsi  Lexer.fs  Lexer.fsi  Logger.fs  Morth.Language.fsproj  Op.fs  Parser.fs  Parser.fsi  Sim.fs  Sim.fsi  Token.fs
fs/Morth.Tests/: Morth.Tests.fsproj  Tests.fs
fs/examples/: test.porth
fs/tests/: hello.porth  loops.porth
haskell/: .gitignore  .hlint.yaml  .local_vimrc.vim  Morth.cabal  Morth.hs  Warning-all.yaml  fourmolu.yaml  test.porth
haskell/Support/: Composition.hs
haskell/app/: Morth.hs
haskell/examples/: rule110.porth
haskell/lib/Morth/: Blocks.hs  Com.hs  Compiler.hs  Config.hs  Driver.hs  Errors.hs  Frontend.hs  Interpreter.hs  Lexer.hs  Location.hs  Logger.hs  OS.hs  Op.hs  Parser.hs  Sim.hs  Token.hs
haskell/lib/MorthLanguage/: Com.hs  Driver.hs  Lexer.hs  Logger.hs  Op.hs  Parser.hs  Sim.hs  Token.hs
haskell/test/: Main.hs
haskell/test/Morth/: Test.hs
haskell/tests/: arithmetic.porth  arithmetic.txt  bitwise.porth  comparison.porth  comparison.txt  conditions.porth  control-flow.porth  control-flow.txt  hello.porth  loops.porth  memory.porth  stack.porth  stack.txt
javascript/: .local_vimrc.vim  index.js  package-lock.json  package.json
nim/: .gitignore  .local_vimrc.vim  build.nims  com.nim  compile.nim  config.nims  cross_reference.nim  dump.ll  lex.nim  load.nim  main.nim  morth.nim  op.nim  parse.nim  sim.nim  simulate.nim  stack.ll  test.nim
nim/assembly_src/: dump.c
nim/tests/: .gitignore  arithmetic.morth  if.morth  loops.morth  test.morth
porth/: Cargo.toml
porth/src/: main.rs
python/: .local_vimrc.vim  pyproject.toml
python/morth/: __init__.py  __main__.py
racket/: .gitignore  .local_vimrc.vim  morth.rkt  test-com.sh  test-sim.sh
ruby/: .gitignore  .local_vimrc.vim  morth.rb  test-com.sh  test-sim.sh
rust/: .gitignore  .local_vimrc.vim  Cargo.toml
rust/morth/: Cargo.toml
rust/morth/src/: lex.rs  lib.rs  location.rs  op.rs  parse.rs  sim.rs  token.rs
rust/morth_compiler/: Cargo.toml
rust/morth_compiler/src/: main.rs
rust/src/: main.rs
typescript/: .eslintrc.json  .gitignore  package-lock.json  package.json  tsconfig.json
typescript/src/morth/: index.ts
zig/: .gitignore  build.zig  gyro.zzz  test.zig_template  testTemplate.zig  test_header.zig_template
zig/src/: .gitignore  com.zig  crossReference.zig  die.zig  doTest.zig  dump.c  epilogue.nasm  load.zig  main.zig  mem.zig  op.zig  path.zig  prelude.nasm  process.zig  program.zig  sim.zig  token.zig  usage.txt
zig/src/tests/: arithmetic.morth  bitwise.morth  comparison.morth  conditions.morth  loops.morth  memory.morth  rule110.morth  stack.morth  test.morth
zig/tests/: conditions.morth  test.morth
