cabal-version: 2.4
name: Morth
version: 0.1.0
homepage: https://gitlab.com/Phytolizer/Morth.git
license: MIT
author: Kyle Coffey
maintainer: me@phytolizer.dev
copyright: 2022 Kyle Coffey
build-type: Simple

library morth-language
    hs-source-dirs: lib
    exposed-modules: Morth.Driver
                   , Morth.Errors
    other-modules: Morth.Blocks
                 , Morth.Com
                 , Morth.Lexer
                 , Morth.Logger
                 , Morth.Op
                 , Morth.Parser
                 , Morth.Sim
                 , Morth.Token
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    ghc-options: -Wall -Werror=incomplete-patterns
    build-depends: base >= 4.7 && < 5,
                   bytestring,
                   filepath,
                   formatting,
                   primitive,
                   process,
                   shell-escape,
                   text

executable Morth
    hs-source-dirs: app
    main-is: Morth.hs
    default-language: Haskell2010
    build-depends: morth-language,
                   base >= 4.7 && < 5
