cabal-version: 2.4
name: Morth
version: 0.1.0
homepage: https://gitlab.com/Phytolizer/Morth.git
license: MIT
author: Kyle Coffey
maintainer: me@phytolizer.dev
copyright: 2022 Kyle Coffey
build-type: Simple
category: development
synopsis: A simple, stack-based, concatenative programming language.
description:
    A simple, stack-based, concatenative programming language.
    A reinvention of Tsoding's Porth language in Haskell.

library Support
    exposed-modules: Support.Composition
    default-language: Haskell2010
    ghc-options: -Wall -Werror=incomplete-patterns
    build-depends: base >= 4.7 && < 5

library morth-language
    hs-source-dirs: lib
    exposed-modules: Morth.Driver
                   , Morth.Errors
                   , Morth.OS
    other-modules: Morth.Blocks
                 , Morth.Com
                 , Morth.Config
                 , Morth.Frontend
                 , Morth.Lexer
                 , Morth.Logger
                 , Morth.Op
                 , Morth.Parser
                 , Morth.Sim
                 , Morth.Token
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    ghc-options: -Wall -Werror=incomplete-patterns
    build-depends: base >= 4.7 && < 5,
                   bytestring >= 0.11.4 && < 0.12,
                   containers >= 0.6.7 && < 0.7,
                   filepath >= 1.4.2 && < 1.5,
                   formatting >= 7.2.0 && < 7.3,
                   primitive >= 0.8.0 && < 0.9,
                   process >= 1.6.16 && < 1.7,
                   shell-escape >= 0.2.0 && < 0.3,
                   text >= 2.0.2 && < 2.1

executable Morth
    hs-source-dirs: app
    main-is: Morth.hs
    default-language: Haskell2010
    ghc-options: -Wall -Werror=incomplete-patterns
    build-depends: morth-language,
                   base >= 4.7 && < 5

test-suite morth-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    other-modules: Morth.Test
    default-language: Haskell2010
    ghc-options: -Wall -Werror=incomplete-patterns
    build-depends: morth-language,
                   Support,
                   base >= 4.7 && < 5,
                   Diff >= 0.4.1 && < 0.5,
                   directory >= 1.3.8 && < 1.4,
                   filepath >= 1.4.2 && < 1.5,
                   HUnit >= 1.6.2 && < 1.7,
                   silently >= 1.2.5 && < 1.3
